[gd_scene load_steps=5 format=3 uid="uid://7h2lkfhkh3us"]

[ext_resource type="Texture2D" uid="uid://b07d1cms666vj" path="res://assets/human.png" id="1_11jcu"]
[ext_resource type="Script" uid="uid://dhm620tvb8ygi" path="res://human.gd" id="1_86l0o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8ay4o"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_86l0o"]
radius = 40.0125

[node name="Human" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
motion_mode = 1
script = ExtResource("1_86l0o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8ay4o")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_11jcu")

[node name="LaserSpot" type="Node2D" parent="."]
position = Vector2(64, 15)

[node name="FireTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_86l0o")

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
